fix issue with locks appearing everywhere and alignment of non completed circle icon

--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -19,7 +19,7 @@
     margin-top: 0;   
 }
 
-.drawercontent .courseindex .icon.fa {
+.drawercontent .courseindex .icon.fa-circle, .drawercontent .courseindex .icon.fa {
 	display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -31,8 +31,16 @@
     align-self: center;
 }
 
-.drawercontent .courseindex .courseindex-item .courseindex-locked {    
-    display: inline-flex;
+/* Course index lock icons: visible only for actually locked sections */
+.drawercontent .courseindex .courseindex-item .courseindex-locked {
+    display: none; /* hide by default for all sections */
+    align-items: center;
+    align-self: center;
+}
+
+/* Show lock only for sections with restrictions */
+.drawercontent .courseindex .courseindex-item.restrictions .courseindex-locked {
+    display: inline-flex; /* show visually */
     align-items: center;
     align-self: center;
 }
